// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot no data 1`] = `
<div
  className="pnls"
  id="main-pnl"
>
  Not found
</div>
`;

exports[`matches snapshot while fetching 1`] = `
<div
  id="loader"
  style={Object {}}
>
  <img
    alt="loading something..."
    className="loader"
    src="loader.gif"
  />
</div>
`;

exports[`matches snapshot while not saving 1`] = `
<div
  className="pnls"
  id="main-pnl"
>
  <h4
    className="form-header trebuchet text-center bold"
  >
    Edit user 117
    <button
      className="add-new pointer pull-right bold"
      onClick={undefined}
    >
      <i
        className="fa fa-close theme"
      />
    </button>
  </h4>
  <div
    className="add-pnl-cnt"
  >
    <form
      id="user_frm"
      onSubmit={[Function]}
    >
      <div
        className="row"
      >
        <label
          htmlFor="firstName"
        >
          First Name:
          <input
            className="form-control"
            id="firstName"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="First name"
            required={true}
            value="SAMPLE"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="lastName"
        >
          Last Name:
          <input
            className="form-control"
            id="lastName"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Last name"
            required={true}
            value="DOE"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="userName"
        >
          Username:
          <input
            className="form-control"
            id="userName"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Username"
            required={true}
            value="robert"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="mobileNumber"
        >
          Phone number:
          <input
            className="form-control"
            id="mobileNumber"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Mobile phone number"
            required={true}
            value="254700156952"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="primaryEmail"
        >
          Email:
          <input
            className="form-control"
            id="primaryEmail"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Email (Optional)"
            value="robert@merchant8.com"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="status"
        >
          Status
          <select
            className="form-control"
            id="status"
            onBlur={[Function]}
            onChange={[Function]}
            value={1}
          >
            <option
              disabled={true}
              value={0}
            >
              Select One...
            </option>
            <option
              disabled={undefined}
              value={1}
            >
              Active
            </option>
            <option
              disabled={undefined}
              value={2}
            >
              Inactive
            </option>
          </select>
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="businessUnitName"
        >
          Business Unit
          <select
            className="form-control"
            id="businessUnitName"
            onBlur={[Function]}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={0}
            >
              Select One...
            </option>
            <option
              disabled={undefined}
              value={1}
            >
              Choose a business unit
            </option>
          </select>
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="roleId"
        >
          Role
          <select
            className="form-control"
            id="roleId"
            onBlur={[Function]}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={0}
            >
              Select One...
            </option>
            <option
              disabled={undefined}
              value={1}
            >
              Choose a role
            </option>
            <option
              disabled={undefined}
              value={2}
            >
              A role
            </option>
          </select>
        </label>
      </div>
      <hr />
      <div />
      <article
        className="row modal-p pull-right"
      >
        <button
          className="btn btn-default"
          type="submit"
        >
          SAVE
        </button>
      </article>
    </form>
  </div>
</div>
`;

exports[`matches snapshot while saving 1`] = `
<div
  className="pnls"
  id="main-pnl"
>
  <h4
    className="form-header trebuchet text-center bold"
  >
    Edit user 117
    <button
      className="add-new pointer pull-right bold"
      onClick={undefined}
    >
      <i
        className="fa fa-close theme"
      />
    </button>
  </h4>
  <div
    className="add-pnl-cnt"
  >
    <form
      id="user_frm"
      onSubmit={[Function]}
    >
      <div
        className="row"
      >
        <label
          htmlFor="firstName"
        >
          First Name:
          <input
            className="form-control"
            id="firstName"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="First name"
            required={true}
            value="SAMPLE"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="lastName"
        >
          Last Name:
          <input
            className="form-control"
            id="lastName"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Last name"
            required={true}
            value="DOE"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="userName"
        >
          Username:
          <input
            className="form-control"
            id="userName"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Username"
            required={true}
            value="robert"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="mobileNumber"
        >
          Phone number:
          <input
            className="form-control"
            id="mobileNumber"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Mobile phone number"
            required={true}
            value="254700156952"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="primaryEmail"
        >
          Email:
          <input
            className="form-control"
            id="primaryEmail"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Email (Optional)"
            value="robert@merchant8.com"
          />
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="status"
        >
          Status
          <select
            className="form-control"
            id="status"
            onBlur={[Function]}
            onChange={[Function]}
            value={1}
          >
            <option
              disabled={true}
              value={0}
            >
              Select One...
            </option>
            <option
              disabled={undefined}
              value={1}
            >
              Active
            </option>
            <option
              disabled={undefined}
              value={2}
            >
              Inactive
            </option>
          </select>
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="businessUnitName"
        >
          Business Unit
          <select
            className="form-control"
            id="businessUnitName"
            onBlur={[Function]}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={0}
            >
              Select One...
            </option>
            <option
              disabled={undefined}
              value={1}
            >
              Choose a business unit
            </option>
          </select>
        </label>
      </div>
      <div
        className="row"
      >
        <label
          htmlFor="roleId"
        >
          Role
          <select
            className="form-control"
            id="roleId"
            onBlur={[Function]}
            onChange={[Function]}
            value={0}
          >
            <option
              disabled={true}
              value={0}
            >
              Select One...
            </option>
            <option
              disabled={undefined}
              value={1}
            >
              Choose a role
            </option>
            <option
              disabled={undefined}
              value={2}
            >
              A role
            </option>
          </select>
        </label>
      </div>
      <hr />
      <div />
      <article
        className="row modal-p pull-right"
      >
        <div
          id="loader"
          style={Object {}}
        >
          <img
            alt="loading something..."
            className="loader"
            src="loader.gif"
          />
        </div>
      </article>
    </form>
  </div>
</div>
`;
